--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
           Why Choose MGT?
         </h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-10">
           <!-- item -->
           <div
             class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
