--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,6 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
-
     <!-- Footer -->
     <div
       class="relative bg-cover bg-center p-8"
@@ -202,23 +201,25 @@
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
       <footer
-        class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white"
+        class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white text-center sm:text-left"
       >
         <!-- Contact Details -->
-        <div>
+        <div class="sm:text-left">
           <h1 class="text-xl font-bold">Contact Details</h1>
-          <div class="flex mt-5 items-start mb-8">
+          <div
+            class="flex mt-5 items-start justify-center sm:justify-start mb-8"
+          >
             <i class="fa-solid fa-envelope text-3xl"></i>
             <div class="ml-4 text-lg">
               <p>enquiries@mgtnigeria.com</p>
               <p>customercare@mgtnigeria.com</p>
             </div>
           </div>
-          <div class="flex items-center mb-8">
+          <div class="flex items-center justify-center sm:justify-start mb-8">
             <i class="fa-solid fa-phone text-3xl"></i>
             <p class="ml-4 text-lg">+2347033716203</p>
           </div>
-          <div class="flex items-start">
+          <div class="flex items-start justify-center sm:justify-start">
             <i class="fa-solid fa-location-dot text-3xl"></i>
             <p class="ml-4 text-lg">
               17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
@@ -229,7 +230,7 @@
         <!-- Quick Links -->
         <div>
           <h1 class="text-xl font-bold">Quick Links</h1>
-          <nav class="flex flex-col text-lg">
+          <nav class="flex flex-col items-center sm:items-start text-lg">
             <a href="index.html" class="mt-5 hover:underline">Home</a>
             <a href="about.html" class="mt-5 hover:underline">About</a>
             <a href="services.html" class="mt-5 hover:underline">Services</a>
@@ -239,12 +240,12 @@
         </div>
 
         <!-- Keep in Touch -->
-        <div>
+        <div class="mt-8 sm:mt-0">
           <h1 class="text-xl font-bold">Keep in Touch</h1>
           <input
             type="email"
             placeholder="Enter your email..."
-            class="block py-3 px-4 my-6 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="block py-3 px-4 my-6 mx-auto sm:mx-0 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
           />
           <div class="relative">
             <input
